@@ -19,6 +19,7 @@ Inline and included scripts are supported, as are the following DOM elements:
 <li>self      - the Window itself</li>
 <li>top       - the top frame in the frameset containing this window
 <li>window    - a synonym for self</li>
+<li>&lt;name&gt;    - the subframe of this window with the specified name
 </ul>
 <h4>events</h4>
 <ul>
